# multimodal_pipeline

./: .gitignore  README.md  convert_to_stgcnn.py  requirements.txt  run_calib_node.sh  run_pcd_node.sh  run_sync_node.sh  tree.txt
scritps/: convert_json_to_h5.py  convert_to_nuscene.py  converter_pcd2bin.py  frame_per_person.py  h5pyview.py  k.json  raw_detections.json  stgcnn_txtformat.py
scritps/out_csv/: test.csv  train.csv  val.csv
source/data_labeler/: package.xml  setup.cfg  setup.py
source/data_labeler/data_labeler/: detector.py
source/data_labeler/srv/: RunDetection.srv
source/interfaces/: CMakeLists.txt  package.xml
source/interfaces/srv/: RunDetection.srv
source/multimodal_modeling/: package.xml  setup.cfg  setup.py
source/multimodal_modeling/sensor_visualizer/: camera_node.py  lidar_node.py  radar_node.py
source/sensor_sync/: CMakeLists.txt  package.xml
source/sensor_sync/launch/: start_sync_line.launch.py
source/sensor_sync/msg/: SyncedSensors.msg
source/sensor_sync/sensor_sync/: __init__.py  calibration_node.py  lidar_test_node.py  lidar_utils.py  pcd_maker_node.py  sync2_node.py  sync_node.py  visualizer.py
